# cc-speedy

./: CLAUDE.md  Cargo.toml  FEATURES.md  README.md  RELEASE_NOTES.md  install.sh
.github/workflows/: release.yml
.opencode/skills/gep-code-review/: SKILL.md
docs/: obsidian-setup.md
docs/plans/: 2026-03-05-cc-speedy-design.md  2026-03-05-cc-speedy-implementation.md  2026-03-10-opencode-integration-design.md
docs/superpowers/plans/: 2026-03-10-opencode-integration.md  2026-03-18-btop-ui-restyle.md  2026-04-04-copilot-integration.md  (+7 more)
src/: copilot_insights.rs  copilot_sessions.rs  copilot_turn_detail.rs  digest.rs  git_status.rs  insights.rs  install.rs  lib.rs  liveness.rs  main.rs  obsidian.rs  obsidian_cli.rs  opencode_sessions.rs  refresh.rs  sessions.rs  settings.rs  store.rs  summary.rs  theme.rs  tmux.rs  tui.rs  turn_detail.rs  unified.rs  update.rs  util.rs
src/web/: assets.rs  handlers.rs  mod.rs  tailer.rs  wire.rs
tests/: copilot_insights_test.rs  copilot_sessions_test.rs  copilot_turn_detail_test.rs  digest_test.rs  git_status_test.rs  insights_test.rs  install_test.rs  learning_library_test.rs  liveness_test.rs  obsidian_cli_integration_test.rs  obsidian_cli_test.rs  obsidian_test.rs  opencode_sessions_test.rs  project_dashboard_test.rs  refresh_test.rs  session_linking_test.rs  sessions_test.rs  settings_test.rs  store_kb_test.rs  summary_kb_test.rs  summary_test.rs  tags_test.rs  tmux_test.rs  tui_grep_test.rs  turn_detail_test.rs  unified_test.rs  util_test.rs  web_test.rs
tests/fixtures/: sample.jsonl  sessions-index.json
(+22 files in other folders)
