[package]
name = "cc-speedy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cc-speedy"
path = "src/main.rs"

[lib]
name = "cc_speedy"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
